Spring boot mvc project-with static data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-<<<<<<< HEAD
-
-=======
-//configure server port
+#configure server port
 server.port=8080
->>>>>>> 8127840 (Spring boot mvc project-with static data(html files and bootstrap css))
